add endpoint create, read and update endpoints for Service.java