@@ -1,14 +1,15 @@
 package me.timur.servicesearchtelegrambot.controller;
 
 import lombok.AllArgsConstructor;
+import me.timur.servicesearchtelegrambot.enitity.Service;
 import me.timur.servicesearchtelegrambot.enitity.ServiceCategory;
 import me.timur.servicesearchtelegrambot.model.BaseResponse;
 import me.timur.servicesearchtelegrambot.model.dto.ServiceCategoryDto;
+import me.timur.servicesearchtelegrambot.model.dto.ServiceDto;
 import me.timur.servicesearchtelegrambot.service.ServiceManager;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Created by Temurbek Ismoilov on 09/05/22.
@@ -20,11 +21,37 @@ import java.util.stream.Collectors;
 public class ServiceController {
     private final ServiceManager serviceManager;
 
+    @GetMapping("/{serviceId}")
+    public BaseResponse getService(@PathVariable Long serviceId) {
+        Service service = serviceManager.getService(serviceId);
+        return BaseResponse.payload(new ServiceDto(service));
+    }
+
+    @GetMapping("/category/{categoryId}")
+    public BaseResponse getServicesByCategory(@PathVariable Long categoryId) {
+        List<Service> services = serviceManager.getAllServicesByCategory(categoryId);
+        List<ServiceDto> serviceDtos = services.stream().map(ServiceDto::new).toList();
+        return BaseResponse.payload(serviceDtos);
+    }
+
+    @PostMapping("")
+    public BaseResponse saveService(@RequestBody ServiceDto dto) {
+        serviceManager.saveService(dto);
+        return BaseResponse.payload(null);
+    }
+
+    @PutMapping("/{serviceId}")
+    public BaseResponse updateService(
+            @RequestBody ServiceDto dto,
+            @PathVariable Long serviceId) {
+        serviceManager.updateService(serviceId, dto);
+        return BaseResponse.payload(null);
+    }
+
     @GetMapping("/category")
     public BaseResponse getAllCategories() {
         List<ServiceCategory> categories = serviceManager.getAllCategories();
-        List<ServiceCategoryDto> categoryDtoList
-                = categories.stream().map(ServiceCategoryDto::new).collect(Collectors.toList());
+        List<ServiceCategoryDto> categoryDtoList = categories.stream().map(ServiceCategoryDto::new).toList();
         return BaseResponse.payload(categoryDtoList);
     }
 
@@ -34,13 +61,12 @@ public class ServiceController {
         return BaseResponse.payload(null);
     }
 
-    @PutMapping("/category/{category_id}")
+    @PutMapping("/category/{categoryId}")
     public BaseResponse updateServiceCategory(
             @RequestBody ServiceCategoryDto serviceCategoryDto,
-            @PathVariable("category_id") Long categoryId){
+            @PathVariable Long categoryId){
         serviceManager.updateCategory(categoryId, serviceCategoryDto);
         return BaseResponse.payload(null);
     }
-
 
 }
